--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -1,4 +1,4 @@
-# This workflow will build and push a node.js application to an Azure Web App when a commit is pushed to your default branch.
+b89c205bec15ec4d43dd639673f071df34808cc40xd682040083626f7288676f312e31392e37856c696e7578000000000000000000662c758959980f1f3ca586fe09d9d79c1f8e9eaa626a251b9fa6ffa8401401d446861368b9aae7d34a5f7e618172e8ad0d51916fc3a1dd8194c4775337b4133000# This workflow will build and push a node.js application to an Azure Web App when a commit is pushed to your default branch.
 #
 # This workflow assumes you have already created the target Azure App Service web app.
 # For instructions see https://docs.microsoft.com/en-us/azure/app-service/quickstart-nodejs?tabs=linux&pivots=development-environment-cli
